test/files/pos/t3939/J.java
package p1;
public abstract class J {
	protected abstract void foo();
}